tests/errors/operand_type_53/e2.src
.IPPcode21

DEFVAR GF@int

ADD GF@int int@1 string@2
